[package]
name = "kv-rustlib"
version = "0.1.0"
authors = ["pingcap"]

[dependencies]
grpcio = "0.4.0"
grpcio-proto = "0.4.0"
protobuf = "2.0.4"
futures = "0.1.0"
log = "0.4.0"
rand = "0.6.0"
bincode = "1.0.0"
serde = "1.0"
crossbeam-channel = "0.1"
serde_derive = "1.0.0"

[dependencies.rocksdb]
git = "https://github.com/pingcap/rust-rocksdb.git"

[dependencies.raft]
git = "https://github.com/pingcap/raft-rs.git"